--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,29 @@
+body {
+    background-image: url(../images/weather.png);
+}
 #current-UV {
     display: inline-block;
     /* background-color: #ee6351; */
     border-radius: 6px;
     /* padding: 0.5%;
     padding-left: 0%; */
+}
+.card {
+    background-color: #a9ecfd;
+}
+
+.list-group-item {
+    background-color: #cef3fc;
+    margin-top: 1%;
+}
+
+.jumbotron {
+    background-image: url(../images/weather.png);
+}
+small {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-top: 15%;
+    color: #359db8;
 }
